<resources>
    <string name="app_name">Movies App</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="pref_sort_key">sort_preference</string>
    <string name="pref_sort_label">Sort by</string>
    <string name="pref_sort_default">popularity.desc</string>
    <string name="dialog_title_list_preference">Type of sort</string>
    <string name="summary_list_preference">Choose sort type</string>
    <string name="dialog_based_preferences">Sort by preference</string>
    <string name="title_activity_settings">Sort Options</string>
    <string name="title_activity_movie_info">MovieInfoActivity</string>
    <string name="title_activity_movie_detail">MovieDetailActivity</string>
    <string name="image_poster_description">Movie Poster</string>
    <string name="overview_label">Synopsis</string>
    <string name="release_date_label">Release date</string>
    <string name="vote_avg_label">Rating</string>
    <string name="original_title_label">Original title</string>
</resources>
