<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                tools:context="com.munera.android.moviesapp.app.MovieDetailActivityFragment">

    <ImageView
            android:id="@+id/poster_imageview"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_alignParentTop="true"
            android:contentDescription="@string/image_poster_description"/>

    <TextView
            android:text="@string/original_title_label"
            android:id="@+id/original_title_label_id"
            android:layout_height="20dp"
            android:layout_width="100dp" android:layout_alignTop="@+id/poster_imageview"
            android:layout_toRightOf="@+id/poster_imageview" android:layout_toEndOf="@+id/poster_imageview"/> 


    <TextView
            android:id="@+id/original_title_textview"
            android:layout_width="100dp"
            android:layout_height="20dp" android:layout_below="@+id/original_title_label_id"
            android:layout_toRightOf="@+id/poster_imageview" android:layout_toEndOf="@+id/poster_imageview"/>

    <TextView
            android:id="@+id/release_date_label_text"
            android:text="@string/release_date_label"
            android:layout_width="100dp"
            android:layout_height="20dp" android:layout_below="@+id/original_title_textview"
            android:layout_toRightOf="@+id/poster_imageview" android:layout_toEndOf="@+id/poster_imageview"/>

    <TextView
            android:id="@+id/release_date_textview"
            android:layout_width="100dp"
            android:layout_height="20dp"
            android:layout_below="@+id/release_date_label_text" android:layout_toRightOf="@+id/poster_imageview"
            android:layout_toEndOf="@+id/poster_imageview"/>
    <TextView
            android:text="@string/vote_avg_label"
            android:layout_width="100dp"
            android:layout_height="20dp"
            android:id="@+id/textView3" android:layout_below="@+id/release_date_textview"
            android:layout_alignLeft="@+id/release_date_textview"
            android:layout_alignStart="@+id/release_date_textview"/>

    <TextView
            android:id="@+id/vote_average_textview"
            android:layout_width="100dp"
            android:layout_height="20dp" android:layout_below="@+id/textView3"
            android:layout_toRightOf="@+id/poster_imageview" android:layout_toEndOf="@+id/poster_imageview"/>

    <TextView
            android:id="@+id/textView"
            android:text="@string/overview_label"
            android:layout_width="350dp"
            android:layout_height="20dp"
            android:layout_centerVertical="true" android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"/> 

    <TextView
            android:id="@+id/overview_textview"
            android:layout_width="350dp"
            android:layout_height="180dp" android:layout_below="@+id/textView" android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" android:layout_alignParentBottom="true"/>  
</RelativeLayout>
